Adicionei mais um paragrafo

--- a/sire-exemplo/index.htm
+++ b/sire-exemplo/index.htm
@@ -12,5 +12,6 @@
     <br>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium delectus optio, laudantium laborum animi modi, non veritatis distinctio consequuntur debitis earum ab natus tempora temporibus adipisci, omnis at. Tempore, at.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam expedita quasi natus voluptatum! Aliquam libero qui rerum quis illum? Harum magnam fugit earum officia distinctio, sequi quis voluptatem mollitia odit!</p>
 </body>
 </html>
